Adding Mirajs to project

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>GJMoney</title>
   </head>
   <body>
-    <noscript>Você precisa ativar o Javascript do seu browser para rodar este app.</noscript>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
